--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta name="viewport" content="width=700,maximum-scale=1.0,user-scalable=yes">
         <title>Vimeosubs</title>   
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script> 
-        <script type="text/javascript" src="js/jquery.vimeosubs.min.js"></script> 
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+        <script type="text/javascript" src="js/jquery.vimeosubs.js"></script> 
         <script type="text/javascript">
         jQuery(document).ready(function() { 
         	$('#player_1').vimeosubs({
